New upstream release.
* New upstream release.
  - Includes fix for CVE-2011-3190.
* Updated my email address.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: tomcat7
 Section: java
 Priority: optional
 Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
-Uploaders: James Page <james.page@canonical.com>,
+Uploaders: James Page <james.page@ubuntu.com>,
  Miguel Landaeta <miguel@miguel.cc>, tony mancill <tmancill@debian.org>
 Build-Depends: default-jdk, ant-optional, debhelper (>= 7), po-debconf
 Build-Depends-Indep: maven-repo-helper (>> 1.0.1), libecj-java
