--- a/debian/rules
+++ b/debian/rules
@@ -134,6 +134,12 @@ binary-indep: build install
 	jh_manifest
 	dh_compress
 	dh_fixperms
+
+	# Make the/etc/tomcat8/Catalina/localhost directory writable by the tomcat user
+	for PACKAGE in tomcat8 tomcat8-admin tomcat8-docs tomcat8-examples; do \
+	  chmod 775 --verbose debian/$$PACKAGE/etc/tomcat8/Catalina/localhost; \
+	done
+
 	dh_lintian
 	dh_installdeb
 	dh_gencontrol
